More tweaks to prevent double tap zoom on mobile

--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,10 @@ button {
 }
 
 @media only screen and (max-width:600px) {
+    * {
+        touch-action: manipulation;
+    }
+    
     h1 {
         font-size: 48px;
         margin: 0;
@@ -100,7 +104,6 @@ button {
     button {
         width: 110px;
         height: 110px;
-        touch-action: manipulation;
     }
 
 }
